minor changes done

--- a/blogs.html
+++ b/blogs.html
@@ -57,46 +57,21 @@
           <button class="d-flex align-items-center justify-content-center me-4">
             <img
               class=""
-              src="./assets/vector/notifications.svg"
+              src="./assets/images/Notification.svg"
               alt="hamburger"
             />
           </button>
           <button class="d-flex align-items-center justify-content-center me-4">
-            <img src="./assets/vector/cart.svg" alt="cart" />
+            <img src="./assets/images/Cart.svg" alt="cart" />
           </button>
           <div class="custom-dropdown">
             <button class="dropbtn">
-              <img src="./assets/img/user-sm.png" alt="user" />
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="16"
-                height="16"
-                viewBox="0 0 16 16"
-              >
-                <g
-                  id="Group_11890"
-                  data-name="Group 11890"
-                  transform="translate(4905 5784)"
-                >
-                  <g
-                    id="Group_1656"
-                    data-name="Group 1656"
-                    transform="translate(-4902.061 -5779.274)"
-                  >
-                    <path
-                      id="Path_6068"
-                      data-name="Path 6068"
-                      d="M6.561,0H.75A.75.75,0,0,0,0,.75v5.8a.75.75,0,0,0,1.5,0V1.5H6.561a.75.75,0,0,0,0-1.5Z"
-                      transform="translate(5.165 0) rotate(45)"
-                      fill="#ffc32c"
-                    />
-                  </g>
-                </g>
-              </svg>
+              <img src="./assets/images/profile.svg" alt="user" />
+              <img class="side" src="./assets/images/side-icon.svg" alt="" />
             </button>
           </div>
         </div>
-        <img src="./assets/vector/menu-new.svg" alt="menu" />
+        <img class="d-769-none" src="./assets/vector/menu-new.svg" alt="menu" />
       </div>
     </nav>
 
@@ -426,30 +401,30 @@
           <h3>Browse by tags</h3>
 
           <div class="tags mt-3">
-            <div class="tags-group">
-              <button class="btn-outlined">Mutual Funds</button>
-              <button class="btn-outlined">Cryptocurrency</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Stocks</button>
-              <button class="btn-outlined">Asset Management</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Goal based planning</button>
-              <button class="btn-outlined">Bonds</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Goal based planning</button>
-              <button class="btn-outlined">Start up</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Real Estate</button>
-              <button class="btn-outlined">Term Insurance</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Tax Saving</button>
-              <button class="btn-outlined">Financial Planning</button>
-            </div>
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Mutual Funds</button>
+            <button class="btn-outlined">Cryptocurrency</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Stocks</button>
+            <button class="btn-outlined">Asset Management</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Goal based planning</button>
+            <button class="btn-outlined">Bonds</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Goal based planning</button>
+            <button class="btn-outlined">Start up</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Real Estate</button>
+            <button class="btn-outlined">Term Insurance</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Tax Saving</button>
+            <button class="btn-outlined">Financial Planning</button>
+            <!-- </div> -->
           </div>
           <h3 class="mt-5 mb-3">Related post</h3>
 
@@ -545,31 +520,28 @@
               <h3 class="mb-4 mt-5 mt-sm-0">Browse by tags</h3>
 
               <div class="tags mt-3">
-                <div class="tags-group">
-                  <button class="btn-outlined">Mutual Funds</button>
-                  <button class="btn-outlined">Cryptocurrency</button>
-                  <button class="btn-outlined">Stocks</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Asset Management</button>
-                  <button class="btn-outlined">Goal based planning</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Bonds</button>
-                  <button class="btn-outlined">Goal based planning</button>
-                  <button class="btn-outlined">Start up</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Real Estate</button>
-                  <button class="btn-outlined">Term Insurance</button>
-                  <button class="btn-outlined">Tax Saving</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Financial Planning</button>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                </div>
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Mutual Funds</button>
+                <button class="btn-outlined">Cryptocurrency</button>
+                <button class="btn-outlined">Stocks</button>
+                <!-- </div> -->
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Asset Management</button>
+                <button class="btn-outlined">Goal based planning</button>
+                <!-- </div> -->
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Bonds</button>
+                <button class="btn-outlined">Goal based planning</button>
+                <button class="btn-outlined">Start up</button>
+                <!-- </div> -->
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Real Estate</button>
+                <button class="btn-outlined">Term Insurance</button>
+                <button class="btn-outlined">Tax Saving</button>
+                <!-- </div> -->
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Financial Planning</button>
+                <!-- </div> -->
               </div>
             </div>
           </div>
