--- a/financial-planning.html
+++ b/financial-planning.html
@@ -163,30 +163,30 @@
           <h3>Browse by tags</h3>
 
           <div class="tags mt-3">
-            <div class="tags-group">
-              <button class="btn-outlined">Mutual Funds</button>
-              <button class="btn-outlined">Cryptocurrency</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Stocks</button>
-              <button class="btn-outlined">Asset Management</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Goal based planning</button>
-              <button class="btn-outlined">Bonds</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Goal based planning</button>
-              <button class="btn-outlined">Start up</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Real Estate</button>
-              <button class="btn-outlined">Term Insurance</button>
-            </div>
-            <div class="tags-group">
-              <button class="btn-outlined">Tax Saving</button>
-              <button class="btn-outlined">Financial Planning</button>
-            </div>
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Mutual Funds</button>
+            <button class="btn-outlined">Cryptocurrency</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Stocks</button>
+            <button class="btn-outlined">Asset Management</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Goal based planning</button>
+            <button class="btn-outlined">Bonds</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Goal based planning</button>
+            <button class="btn-outlined">Start up</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Real Estate</button>
+            <button class="btn-outlined">Term Insurance</button>
+            <!-- </div> -->
+            <!-- <div class="tags-group"> -->
+            <button class="btn-outlined">Tax Saving</button>
+            <button class="btn-outlined">Financial Planning</button>
+            <!-- </div> -->
           </div>
           <h3 class="mt-5 mb-3">Related post</h3>
 
@@ -1033,31 +1033,28 @@
               <h3 class="mb-4 mt-5 mt-sm-0">Browse by tags</h3>
 
               <div class="tags mt-3">
-                <div class="tags-group">
-                  <button class="btn-outlined">Mutual Funds</button>
-                  <button class="btn-outlined">Cryptocurrency</button>
-                  <button class="btn-outlined">Stocks</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Asset Management</button>
-                  <button class="btn-outlined">Goal based planning</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Bonds</button>
-                  <button class="btn-outlined">Goal based planning</button>
-                  <button class="btn-outlined">Start up</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Real Estate</button>
-                  <button class="btn-outlined">Term Insurance</button>
-                  <button class="btn-outlined">Tax Saving</button>
-                </div>
-                <div class="tags-group">
-                  <button class="btn-outlined">Financial Planning</button>
-                  <div></div>
-                  <div></div>
-                  <div></div>
-                </div>
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Mutual Funds</button>
+                <button class="btn-outlined">Cryptocurrency</button>
+                <button class="btn-outlined">Stocks</button>
+                <!-- </div> -->
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Asset Management</button>
+                <button class="btn-outlined">Goal based planning</button>
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Bonds</button>
+                <button class="btn-outlined">Goal based planning</button>
+                <button class="btn-outlined">Start up</button>
+                <!-- </div> -->
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Real Estate</button>
+                <button class="btn-outlined">Term Insurance</button>
+                <button class="btn-outlined">Tax Saving</button>
+                <!-- </div> -->
+                <!-- <div class="tags-group"> -->
+                <button class="btn-outlined">Financial Planning</button>
+                <!-- </div> -->
+                <!-- </div> -->
               </div>
             </div>
           </div>
