--- a/notifications.html
+++ b/notifications.html
@@ -417,8 +417,6 @@
           </div>
         </div>
 
-        <div class="shadowy"></div>
-
         <div class="body mt-3 lower-content">
           <div class="item green">
             <svg
@@ -443,7 +441,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -453,6 +451,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -479,7 +480,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -489,6 +490,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -515,7 +519,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -525,6 +529,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -551,7 +558,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -561,6 +568,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -587,7 +597,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -597,6 +607,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -623,7 +636,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -633,6 +646,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -659,7 +675,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -669,6 +685,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -695,7 +714,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -705,6 +724,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
@@ -731,7 +753,7 @@
               <h5 class="text-light-2 fs-1366-12">24 OCT 2021</h5>
             </div>
             <div class="action">
-              <button
+              <!-- <button
                 class="
                   btn btn-bg-light
                   w-100px w-1366-80px
@@ -741,6 +763,9 @@
                 "
               >
                 <span class="text-light-2 fs-17 fs-1366-14 fw-600">Action</span>
+              </button> -->
+              <button class="btn btn-bg-primary fs-17 fs-1366-14">
+                Action
               </button>
             </div>
           </div>
