updates nav items

--- a/blogs.html
+++ b/blogs.html
@@ -58,7 +58,7 @@
             <img
               class=""
               src="./assets/images/Notification.svg"
-              alt="hamburger"
+              alt="notification"
             />
           </button>
           <button class="d-flex align-items-center justify-content-center me-4">
