fixes profile page changes

--- a/profile.html
+++ b/profile.html
@@ -193,7 +193,7 @@
                   </div>
                 </div>
 
-                <div class="custom-form-control switch-container">
+                <div class="custom-form-control switch-container mt-5">
                   <label for="#nominee">
                     <h4>NOMINEE</h4>
                   </label>
@@ -280,9 +280,18 @@
 
                 <div class="custom-form-control empty d-none d-sm-block"></div>
 
-                <div class="custom-form-control">
+                <!-- <div class="custom-form-control">
                   <h4 class="text-light-2">RELATIONSHIP</h4>
                   <input class="custom-input" type="text" value="Brother" />
+                </div> -->
+                <div class="custom-form-control mt-0 mt-sm-5">
+                  <h4 class="text-light-2">RELATIONSHIP</h4>
+                  <div class="custom-select">
+                    <select>
+                      <option value="1">Brother</option>
+                      <option value="2">Father</option>
+                    </select>
+                  </div>
                 </div>
               </div>
               <div class="col-lg-4 col-12 order-lg-3 order-1">
