adds box-shadow to gmail

--- a/refer-and-invest.html
+++ b/refer-and-invest.html
@@ -521,7 +521,7 @@
                         alt="instagram"
                       />
                     </a>
-                    <a href="#">
+                    <a class="shadowy" href="#">
                       <img src="./assets/vector/gmail-refer.svg" alt="gmail" />
                     </a>
                   </div>
