index page responsive checked

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </head>
 
   <body class="planyybody">
-    <div id="dark-overlay-beneath" class="d-none"></div>
+    <div id="dark-overlay-beneath" class=""></div>
     <div id="dark-overlay" class="d-none"></div>
     <div id="right-menu-login" class="d-none">
       <div class="close">
@@ -1674,20 +1674,22 @@
         </div>
       </div>
     </div>
-    <div id="right-menu" class="d-none">
+    <div id="right-menu" class="">
       <div class="close">
         <img src="./assets/images/close.svg" alt="close" />
       </div>
 
       <div class="nav">
-        <a href="#" class="active">Home</a>
-        <a href="#">Reads</a>
-        <a href="#">About Us</a>
-        <a href="#">T&C</a>
+        <a href="#" class="active fs-1366-24 fs-768-32 fw-600">Home</a>
+        <a href="#" class="fs-1366-24 fs-768-32 fs-575-24 fw-600">Reads</a>
+        <a href="#" class="fs-1366-24 fs-768-32 fs-575-24 fw-600">About Us</a>
+        <a href="#" class="fs-1366-24 fs-768-32 fs-575-24 fw-600">T&C</a>
       </div>
 
       <div>
-        <button class="btn btn-bg-primary signup">Sign Up</button>
+        <button class="btn btn-bg-primary signup fs-24 fs-1366-14">
+          Sign Up
+        </button>
       </div>
     </div>
     <div class="custom-modal xs d-none" id="message-modal">
@@ -2055,10 +2057,10 @@
                 <button class="btn btn-bg-primary" id="signup-btn">
                   Sign up
                 </button>
-                <span class="my-2 my-sm-0 d-sm-inline d-block"> or </span>
+                <span class="my-2 fs-14 my-sm-0 d-sm-inline d-block"> or </span>
                 <button class="btn btn-rounded">
                   <img
-                    class="mr-1"
+                    class="mr-2"
                     src="./assets/images/google.svg"
                     alt="google"
                   />
