before profile page

--- a/investment-ready.html
+++ b/investment-ready.html
@@ -61,7 +61,7 @@
               >
                 <div class="card">
                   <img src="./assets/vector/paperless.svg" alt="paperless" />
-                  <h4>100% Paperless Process</h4>
+                  <h4 class="fs-24 fs-1919-16">100% Paperless Process</h4>
                 </div>
               </div>
               <div
@@ -69,7 +69,7 @@
               >
                 <div class="card">
                   <img src="./assets/vector/secure.svg" alt="secure" />
-                  <h4>Secure Data & Money</h4>
+                  <h4 class="fs-24 fs-1919-16">Secure Data & Money</h4>
                 </div>
               </div>
               <div
@@ -77,14 +77,14 @@
               >
                 <div class="card no-line">
                   <img src="./assets/vector/quick.svg" alt="quick" />
-                  <h4>Quick Verification</h4>
+                  <h4 class="fs-24 fs-1919-16">Quick Verification</h4>
                 </div>
               </div>
             </div>
 
             <div class="form">
               <div class="text">
-                <h1 class="mt-2 me-5 fw-600">
+                <h1 class="fs-1919-32 me-5 fw-600">
                   Check if you're <br />
                   <div class="text-yellow">investment ready</div>
                 </h1>
