--- a/profile.html
+++ b/profile.html
@@ -73,7 +73,7 @@
               src="./assets/vector/back-arrow.svg"
               alt="back-arrow"
             />
-            <h2 class="fs-1921-32 fs-1367-24 fs-1366-20">My Profile</h2>
+            <h2 class="fs-32 fs-1919-24 fs-1366-20">My Profile</h2>
           </a>
         </div>
 
@@ -280,10 +280,6 @@
 
                 <div class="custom-form-control empty d-none d-sm-block"></div>
 
-                <!-- <div class="custom-form-control">
-                  <h4 class="text-light-2">RELATIONSHIP</h4>
-                  <input class="custom-input" type="text" value="Brother" />
-                </div> -->
                 <div class="custom-form-control mt-0 mt-sm-5">
                   <h4 class="text-light-2">RELATIONSHIP</h4>
                   <div class="custom-select">
@@ -303,9 +299,7 @@
             </div>
 
             <div class="d-none d-md-block">
-              <h2 class="mt-5 fs-1921-32 fs-1367-24 fs-1366-20">
-                Bank Account
-              </h2>
+              <h2 class="mt-5 fs-32 fs-1919-24 fs-1366-20">Bank Account</h2>
 
               <div class="row">
                 <div class="col-6 col-lg-4">
@@ -359,10 +353,10 @@
 
             <div class="deactivate mt-5 mb-4">
               <div class="left">
-                <h3 class="fw-normal fs-1366-18 text-underline text-yellow">
+                <h3 class="fw-normal fs-1919-18 text-underline text-yellow">
                   Deactivate my account
                 </h3>
-                <p class="lh-28 mt-3 fs-18 fs-1366-14 lh-1366-22 pb-3 pe-3">
+                <p class="lh-28 mt-3 fs-18 fs-1919-14 lh-1366-22 pb-3 pe-3">
                   You will receive an email to confirm your decision. Please
                   note, that all the teams, notes and impediments you have
                   created will be permanently erased.
