--- a/uploader.html
+++ b/uploader.html
@@ -47,11 +47,11 @@
             <div class="details-container">
               <div class="details-item">
                 <div class="details-box green">
-                  <h4 class="box-title fs-14 fs-1366-12">STEP 1</h4>
+                  <h4 class="box-title fs-14 fs-1919-12">STEP 1</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle fs-1366-14">Basic Details</div>
-                    <div class="box-text fs-1366-14">
+                    <div class="box-subtitle fs-1919-14">Basic Details</div>
+                    <div class="box-text fs-1919-14">
                       Tell us about yourself to understand your interest and
                       choices.
                     </div>
@@ -66,11 +66,11 @@
 
               <div class="details-item d-none d-lg-block">
                 <div class="details-box green">
-                  <h4 class="box-title fs-14 fs-1366-12">STEP 2</h4>
+                  <h4 class="box-title fs-14 fs-1919-12">STEP 2</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle fs-1366-14">Bank Details</div>
-                    <div class="box-text fs-1366-14">
+                    <div class="box-subtitle fs-1919-14">Bank Details</div>
+                    <div class="box-text fs-1919-14">
                       As per SEBI, it is mandatory for you to add your bank
                       account details.
                     </div>
@@ -84,11 +84,11 @@
               </div>
               <div class="details-item d-none d-lg-block">
                 <div class="details-box primary">
-                  <h4 class="box-title fs-14 fs-1366-12">STEP 3</h4>
+                  <h4 class="box-title fs-14 fs-1919-12">STEP 3</h4>
 
                   <div class="box-content">
-                    <div class="box-subtitle fs-1366-14">Signature</div>
-                    <div class="box-text fs-1366-14 n-padding">
+                    <div class="box-subtitle fs-1919-14">Signature</div>
+                    <div class="box-text fs-1919-14 n-padding">
                       Your signature should match with your PAN Card’s
                       signature.
                     </div>
@@ -102,13 +102,13 @@
               <input type="file" name="" id="file-upload" />
 
               <h4 class="fw-normal">
-                <span class="d-none d-lg-inline fs-16 fs-1366-14"
+                <span class="d-none d-lg-inline fs-18 fs-1919-14"
                   >Darg and drop files here or</span
                 >
-                <span class="text-yellow fw-bold">browse</span>
+                <span class="text-yellow fs-18 fs-1919-14 fw-bold">browse</span>
               </h4>
             </div>
-            <h4 class="text-end text-light-2 mt-2 fs-14 fs-1366-12 pe-2">
+            <h4 class="text-end text-light-2 mt-2 fs-14 fs-1919-12 pe-2">
               Only Jpg and png with maximum file size 2Mb
             </h4>
 
