--- a/financial-planning.html
+++ b/financial-planning.html
@@ -30,7 +30,7 @@
 
     <!-- --------------------------------------------- NAVBAR START --------------------------------------------- -->
 
-    <nav id="navbar">
+    <nav id="navbar" class="fp">
       <a href="#" class="logo">
         <img src="./assets/vector/logo.svg" alt="logo" />
       </a>
